[package]
name = "cookies"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false }
diesel = { version = "1.4.8", features = ["postgres"] }
#serde = { version = "1.0.131", features = ["derive"]}
#dotenv = "0.15.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

#[dependencies.rocket_contrib]
#version = "0.4.10"
#default-features = false
#features = ["json", "serve", "diesel_postgres_pool"]